changed steps area to textarea. also fixed style of addrecipe button on landing page

--- a/client/src/styles/Globals.css
+++ b/client/src/styles/Globals.css
@@ -72,17 +72,14 @@ a:hover {
     width: 50%;
 }
 
-.btn-addrecipe {
+.btn {
     background-color: #415A77;
     color: #F4EDEA;
-    margin-top: 2%;
-    margin-left: 2%;
-    font-size: small;
 }
 
-.btn-addrecipe:hover {
-    background-color: #778DA9;
-    color: #F4EDEA;
+.addrecipe {
+    margin-top: 2%;
+    margin-left: 2%;
 }
 
 .btn-addRecipeInfo {
